--- a/index.css
+++ b/index.css
@@ -3,6 +3,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+a {
+  color: #acdcee;
+}
+
 .weather-app {
   background-color: white;
   margin: 80px auto;
@@ -10,4 +14,35 @@ body {
   padding: 30px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 15px;
+}
+
+header {
+  border-bottom: 1px solid #f0fbff;
+  padding: 0 0 30px 0;
+}
+
+.search-form-input {
+  background-color: #f0fbff;
+  border: none;
+  border-radius: 5px;
+  width: 80%;
+  font-size: 15px;
+  padding: 15px 20px;
+}
+
+.search-form-button {
+  background-color: #acdcee;
+  padding: 15px 25px;
+  border-radius: 5px;
+  border: none;
+  margin-left: 5px;
+  font-size: 15px;
+}
+
+footer {
+  border-top: 1px solid #f0fbff;
+  padding: 30px 0 0;
+  text-align: center;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.6);
 }
