--- a/index.css
+++ b/index.css
@@ -39,6 +39,51 @@ header {
   font-size: 15px;
 }
 
+main {
+  padding: 30px 0;
+}
+
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.weather-app-city {
+  margin: 0;
+  font-size: 35px;
+  line-height: 48px;
+}
+
+.weather-app-details {
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.weather-app-details strong {
+  color: #1e549f;
+}
+
+.weather-app-temp-container {
+  display: flex;
+}
+
+.temp-icon {
+  font-size: 40px;
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+.temp {
+  font-size: 80px;
+  font-weight: bold;
+}
+
+.temp-unit {
+  font-size: 22px;
+  margin-top: 16px;
+  font-weight: bold;
+}
+
 footer {
   border-top: 1px solid #f0fbff;
   padding: 30px 0 0;
